kubernetes/clusters/homelab/apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-prod-cp-1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: qbittorrent
          image: ghcr.io/home-operations/qbittorrent:5.2.3@sha256:4fcf15b7f265c2c8d7bc2a7e13240a07e0593c326f3cf3b5b9bb69eec5b79299
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
            - name: qbittorrent-pvc
              mountPath: /config
            - name: media-nfs
              mountPath: /mnt/media
              readOnly: false
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: qbittorrent-pvc
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: media-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: tmp-volume
          emptyDir: {}
