kubernetes/clusters/homelab/apps/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 19669
      targetPort: torrent-tcp
      protocol: TCP
      name: torrent-tcp
    - port: 19669
      targetPort: torrent-udp
      protocol: UDP
      name: torrent-udp
  selector:
    app.kubernetes.io/name: qbittorrent
