kubernetes/clusters/homelab/apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: infra-traefik
  rules:
    - host: qbittorrent.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
